demo update user
