# app/Http/Requests/User/UpdateUserRequest.php
@@ -3,6 +3,16 @@
 namespace App\Http\Requests\User;
 
 use Illuminate\Foundation\Http\FormRequest;
+/**
+* @OA\Schema(
+ *     schema="UserUpdateRequest",
+ *     required={"name", "phone", "address"},
+ *     @OA\Property(property="name", type="string", example="Nguyễn Văn A"),
+ *     @OA\Property(property="phone", type="string", example="0123456789"),
+ *     @OA\Property(property="address", type="string", example="123 Đường ABC, Quận 1, TP.HCM"),
+ *     @OA\Property(property="avatar_url", type="string", format="binary", description="Ảnh đại diện"),
+ * )
+ */
 
 class UpdateUserRequest extends FormRequest
 {
@@ -22,7 +32,10 @@ class UpdateUserRequest extends FormRequest
     public function rules(): array
     {
         return [
-            //
+            'name' => 'required|string|max:255',
+            'phone' => 'nullable|string|max:20',
+            'address' => 'nullable|string|max:500',
+            'avatar_url' => 'nullable|image|mimes:jpg,jpeg,png|max:2048', 
         ];
     }
 }
